--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "python.pythonPath": "D:\\miniConda\\python.exe",
     "python.testing.pytestArgs": [
-        "tests"
+        "src"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
